# AbletonLiveThemeConverter

./: .gitignore  00Light.ask  00Lightnew.ask  Cargo.toml  LICENSE  README.md  Vice10.ask  backupText.json  helloworld.ask  index copy.js  index old.js  index.js  package-lock.json  package.json  pkgs.nix  shell.nix
.github/workflows/: rust.yml
modules/: filehandler.module.js  objhandler.module.js
schemas/: 10.0_377.txt  11.0_436.txt  12.0_12049.txt  9.5_327.txt
scripts/: addToFiles.sh  packWasm.sh
src/: common.rs  index.js  lib.rs  live10.rs  live11.rs  live12.rs  main.rs  util.rs  wasm.rs
src/modules/: filehandler.module.js  objhandler.module.js  rgb.module.js  rgb.secondinputbackup.js  secondinputbackup.module.js
src/modules/polyfill/: polyfillbackup.module.js  polyfillhandler.module.js
src/modules/polyfill/backupJsons/: 00LightPolyfill.json
test_themes/: blank_10.ask  blank_11.ask  blank_12.ask
test_themes/live11/: 00Light.ask  01Mid Light.ask  02Mid Dark.ask  03Dark.ask
test_themes/live12/: Classic Medium Dark.ask  Classic Medium Light.ask  Default Dark Cool High.ask  Default Dark Cool Medium.ask  Default Dark Neutral High.ask  Default Dark Neutral Medium.ask  Default Dark Warm High.ask  Default Dark Warm Medium.ask  Default Light Cool High.ask  Default Light Cool Medium.ask  Default Light Neutral High.ask  Default Light Neutral Medium.ask  Default Light Warm High.ask  Default Light Warm Medium.ask
xtask/: Cargo.toml
xtask/src/: generate_from_schema.rs  generate_json_schema.rs  main.rs
