[package]
name = "altc"
version = "0.1.0"
edition = "2021"
default-run = "schemagen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "altc"
required-features = ["bin"]

[[bin]]
name = "schemagen"
required-features = ["schemagen"]

[features]
default = ["bin"]
bin = ["clap"]
schemagen = ["clap", "syn", "quote", "proc-macro2", "convert_case"]

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde_with = "3.7"
# bin stuff
clap = { version = "4.5", features = ["derive"] , optional = true }
# schemagen stuff
syn = { version = "2.0", features = ["parsing", "printing", "extra-traits"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
convert_case = { version = "0.6", optional = true }
