[package]
name = "altc"
version = "0.2.6"
edition = "2021"
description = "Convert Live 10, 11, and 12 themes"
readme = "README.md"
repository = "https://github.com/amydevs/AbletonLiveThemeConverter"
license = "MIT"
default-run = "altc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "altc"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["clap"]

[dependencies]
quick-xml = { version = "0", features = ["serialize"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
tsify = "0.4"
serde_with = "3"
schemars = "=1.0.0-alpha.2"
# bin stuff
clap = { version = "4", features = ["derive"] , optional = true }

[workspace]
members = [
    "xtask",
]